Development
	Ensure the Gvalue contains a double before trying to use it
	Ellipsize items on the playlist, so they don't add extra spacing to the list
	Add gl3 to list of available VOs. make sure mplayer2 supports this on your setup before setting
	Save media state in file->open and file->recent selections
	Rework UBUNTU_MENUPROXY reading
	Add some extra debug information for enable_global_menu
	Fix cut and paste error with vbox padding
	Prevent assertion warning in database retrieval code
	Fix fullscreen icon used in place of play icon, problem caused by symbolic icon fix (Issue #656)
	Only update the database when we really want to change something, speeds things up on load
	Keep code from infinitly looping if audio device is not found
	Apply patch to compile with libgda4 or libgda5
    Fix some problems on initial volume setup, when pulseaudio device query is slow
    Don't monitor system volume, when running in softvol mode
	Update metadata in database as needed
	Don't reset unchanged values in the database
	Implement media play resume, from last viewed location
	Cleanup some minor compiler warnings
    Track resumable media in database
    Force a resize if we know the size from the database when opening a file
    Apply recommended fix from Issue #658
    Prevent crash when loading large playlist the first time
    Handle ' character in metadata
    Allow code to compile without libgda
    Update metadata in playlist as it becomes more precise
    Read metadata from database and use it
    Insert metadata into sqlite database, please delete $HOME/.config/gnome-mplayer/gnome-mplayer.db if you get insert errors
        as database schema has changed
    More database foundation code
    Clean up some more depreciated GTK2 calls in GTK3 mode
    Clean up unused variable messages is GTK2 mode
    Clean up some depreciated GTK2 calls in GTK3 mode
    Wrap some more symbolic icons to fix Issue 656
    Add create and delete tables code to database.c